--- a/sources/part2/00-preface.adoc
+++ b/sources/part2/00-preface.adoc
@@ -43,7 +43,7 @@ The following OGC Members participated in editing this document:
 [.preface]
 == Document Contributors
 
-The following OGC Members contributed and particpated in developing Version 1.1 of the ModSpec.
+The following OGC Members contributed and participated in developing Version 1.1 of the ModSpec.
 
 [%unnumbered]
 |===
