--- a/sources/sections/04-terms-and-defs.adoc
+++ b/sources/sections/04-terms-and-defs.adoc
@@ -30,7 +30,7 @@ a module (the target) which is used, produced or associated to by an implementat
 
 another requirements class (the dependency) whose requirements are defined to also be requirements of this requirements class
 
-NOTE: A direct dependency (of a requirements class) of the current requirements class will have the same standardization target as the current requirements class. This is another ways of saying that the current requirements class extends, or uses all the aspects of the direct dependency (or a requirements class). Any tests associated to this dependency can be applied to this requirements class. 
+NOTE: A direct dependency (of a requirements class) of the current requirements class will have the same standardization target as the current requirements class. This is another way of saying that the current requirements class extends, or uses all the aspects of the direct dependency (or a requirements class). Any tests associated to this dependency can be applied to this requirements class. 
 
 When testing a direct dependency of a requirements class, the standardization target is directly subject to the test in the specified conformance test class of the direct dependency of a requirements class.  
 
@@ -105,6 +105,12 @@ NOTE: Includes all statements in a document not part of the normative requiremen
 
 [[Module-definition]]
 
+==== Module
+
+each of a set of standardized parts or independent units that can be used to construct a more complex structure
+
+Note: The concept ‘module’ is key to the ModSpec structure and model. Modules have a direct relationship to the concept of building blocks. The power of the concept is that modules can be reused in different systems (specify once, use many). Modules can be imported from other programs. Modules can be replaced without affecting the rest of the system. 
+
 [[NormativeStatement-definition]]
 
 ==== Normative Statement
@@ -146,6 +152,8 @@ expression in a document conveying information
 Non-normative information that assists in understanding a standard but is not required to implement the standard.   
 
 === Core Terms and Definitions
+
+[[ConformanceClass-definition]]
 
 ==== Conformance Class
 
@@ -194,6 +202,8 @@ NOTE:  The core requirements class is unique because if it was possible to have 
 
 The core can refer to this requirements class, its associated conformance test class or the software module that implements that requirements class.  
 
+[[Model-definition]]
+
 ==== Model
 
 A representation of those aspects of the standardization target type which are to be governed by a standard. The model captures both the conceptual and logical properties of the standardization target type. The requirements promulgated by a standard should be expressed in terms of those conceptual and logical properties.
@@ -205,8 +215,6 @@ In short, the model provides the vocabulary for expressing requirements.
 ==== Permission
 
 uses “may” and is used to prevent a requirement from being “over interpreted” and as such is considered to be more of a “statement of fact” than a “normative” condition. 
-
-[[Principal-definition]]
 
 [[Recommendation-definition]]
 
@@ -265,12 +273,6 @@ NOTE:   The standardization target is the entity which may receive a certificate
 type of entity or set of entities to which the <<Requirement-definition,requirement>> of a <<Standard-definition,standard>> apply
 
 NOTE:  For example, the standardization target type for The OGC API – Features Standard are Web APIs. The standardization target type for the CDB Standard is “datastore”. It is important to understand that a standard’s root standardization target type can have sub-types, and that there can be a hierarchy of target types. For example, a Web API can have sub types of client, server, security, and so forth. As such, each requirements class can have a standardization target type that is a sub-type of the root. 
-
-[[TestType-definition]]
-
-==== TestType
-
-TBD - undefined in 08-131r3
 
 [[will-definition]]
 
