--- a/sources/sections/05-conventions.adoc
+++ b/sources/sections/05-conventions.adoc
@@ -13,13 +13,13 @@ available standard (PAS) by ISO in its earlier 1.3 version.
 
 The normative provisions in this standard are denoted by the URI namespace
 
-https://www.opengis.net/spec/modspec/1.1/
+https://www.opengis.net/spec/modspec-1/1.1/
 
 All requirements that appear in this document are denoted by partial URIs which are relative to the namespace shown above.
 
 For the sake of brevity, the use of “req” in a requirement URI denotes:
 
-https://www.opengis.net/spec/modspec/1.1/
+https://www.opengis.net/spec/modspec-1/1.1/
 
 An example might be:
 
@@ -29,7 +29,7 @@ All conformance tests that appear in this document are denoted by partial URIs w
 
 For the sake of brevity, the use of “conf” in a requirement URI denotes:
 
-https://www.opengis.net/spec/modspec/1.1/
+https://www.opengis.net/spec/modspec-1/1.1/
 
 The same convention is used for permissions (per) and recommendations (rec).
 
@@ -55,7 +55,7 @@ The statement with the unique label is considered the official statement of the 
 
 In this document, all requirements are associated with tests specified in the test suite
 in <<annex-A>>. The reference to the requirement in the test case is done by a
-requirements label Recommendations are not tested although they still are documented using a standard template and have unique identifiers.
+requirements label. Recommendations and permissions are not tested although they still are documented using a standard template and have unique identifiers.
 
 Requirements classes are separated into their own clauses and named, and specified
 according to inheritance (direct dependencies). The Conformance test classes in the
