--- a/README.adoc
+++ b/README.adoc
@@ -11,7 +11,8 @@ This repository contains the revision to the ModSpec core standard and related p
 * The original 08-131r3 as approved in 2009. This is a Word document showing all the initial edits circa mid 2024 as well as comments used for discussion.
 * Issues for discussion and resolution related to the proposed changes
 * Version 1.1 release notes
-* The ModSpec content encoded using the OGC Metanorma template
+* The ModSpec content for the Core, Part 1, and Part 2 encoded using the OGC Metanorma template
+* The OGC ModSpec Policy document
 
 == Structure
 
